--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
@@ -1075,8 +1075,8 @@
                 <div class="modal-body">
                     <form class="row g-3">
                         <div class="col-md-6">
-                            <label for="inputState" class="form-label fs-4 fw-bold">Rent ID : </label>
-                            <label id="inputState" class="form-label fs-4 fw-bold">R001</label>
+                            <label for="inputRentID" class="form-label fs-4 fw-bold">Rent ID : </label>
+                            <label id="inputRentID" class="form-label fs-4 fw-bold">R001</label>
                         </div>
                         <div class="col-md-6">
                             <label for="inputRentDate" class="form-label fs-4 fw-bold">Rent Date : </label>
